upgraded to the new salesforce-deploy-plugin

--- a/dev/test/page.html
+++ b/dev/test/page.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{!URLFOR($Resource.@@resourceName)}/app.css"></link>
   </head>
   <body>
-    <h1>This is a page! </h1>
+    <h1>This is a page! - and I like it</h1>
     <script src="{!URLFOR($Resource.@@resourceName)}/vendor.js"></script>
     <script src="{!URLFOR($Resource.@@resourceName)}/app.js"></script>
   </body>
